Add aspects jar.

--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,12 @@
 
             <dependency>
                 <groupId>org.jboss.capedwarf.blue</groupId>
+                <artifactId>capedwarf-aspects</artifactId>
+                <version>${version.org.jboss.capedwarf}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.capedwarf.blue</groupId>
                 <artifactId>capedwarf-admin</artifactId>
                 <version>${version.org.jboss.capedwarf}</version>
             </dependency>
