--- a/integrate-cd/pom.xml
+++ b/integrate-cd/pom.xml
@@ -187,6 +187,11 @@
 
         <dependency>
             <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-aspects</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
             <artifactId>capedwarf-blobstore</artifactId>
 
         </dependency>
