--- a/integrate-cd/build.xml
+++ b/integrate-cd/build.xml
@@ -103,6 +103,10 @@
             <maven-resource group="org.jboss.as" artifact="jboss-as-clustering-infinispan"/>
         </module-def>
 
+        <module-def name="org.jboss.capedwarf.shared">
+            <maven-resource group="org.jboss.capedwarf.shared" artifact="capedwarf-shared"/>
+        </module-def>
+
         <module-def name="org.jboss.capedwarf">
             <maven-resource group="org.jboss.capedwarf.blue" artifact="capedwarf-admin"/>
             <maven-resource group="org.jboss.capedwarf.blue" artifact="capedwarf-appidentity"/>
