--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <version.jboss.as>7.2.0.Alpha1-SNAPSHOT</version.jboss.as>
+        <version.org.jboss.capedwarf.shared>1.0.0-SNAPSHOT</version.org.jboss.capedwarf.shared>
         <version.org.jboss.as.capedwarf>1.0.0-SNAPSHOT</version.org.jboss.as.capedwarf>
         <version.org.jboss.capedwarf>1.0.0-SNAPSHOT</version.org.jboss.capedwarf>
         <!-- External deps -->
@@ -133,6 +134,12 @@
             </dependency>
 
             <!-- CapeDwarf -->
+
+            <dependency>
+                <groupId>org.jboss.capedwarf.shared</groupId>
+                <artifactId>capedwarf-shared</artifactId>
+                <version>${version.org.jboss.capedwarf.shared}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.jboss.capedwarf</groupId>
