--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <version.org.apache.lucene>3.6.2</version.org.apache.lucene>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
-        <version.org.hibernate.search>4.2.0.CR1</version.org.hibernate.search>
+        <version.org.hibernate.search>4.2.0.Final</version.org.hibernate.search>
         <version.org.infinispan>5.2.0.CR1</version.org.infinispan>
         <version.org.jboss.jandex>1.0.3.Final</version.org.jboss.jandex>
         <version.org.jboss.maven.transformer>1.0.0.Beta4</version.org.jboss.maven.transformer>
