--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,13 @@
         <version.org.jboss.capedwarf>1.0.0-SNAPSHOT</version.org.jboss.capedwarf>
         <!-- External deps -->
         <version.com.google.appengine>1.7.4</version.com.google.appengine>
-        <version.com.google.guava>11.0.2</version.com.google.guava>
+        <version.com.google.guava>13.0.1</version.com.google.guava>
         <version.org.apache.ant>1.8.2</version.org.apache.ant>
         <version.org.apache.lucene>3.6.2</version.org.apache.lucene>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
         <version.org.hibernate.search>4.2.0.Final</version.org.hibernate.search>
-        <version.org.infinispan>5.2.0.CR1</version.org.infinispan>
+        <version.org.infinispan>5.2.0.Final</version.org.infinispan>
         <version.org.jboss.jandex>1.0.3.Final</version.org.jboss.jandex>
         <version.org.jboss.maven.transformer>1.0.0.Beta4</version.org.jboss.maven.transformer>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
