--- a/integrate-cd/build.xml
+++ b/integrate-cd/build.xml
@@ -58,7 +58,11 @@
             <maven-resource group="org.apache.lucene" artifact="lucene-memory"/>
         </module-def>
 
-    	<module-def name="org.bouncycastle.bcmail">
+        <module-def name="org.apache.velocity.tools">
+            <maven-resource group="org.apache.velocity" artifact="velocity-tools"/>
+        </module-def>
+
+        <module-def name="org.bouncycastle.bcmail">
             <maven-resource group="org.bouncycastle" artifact="bcmail-jdk15on"/>
         </module-def>
 
