--- a/integrate-cd/pom.xml
+++ b/integrate-cd/pom.xml
@@ -350,6 +350,11 @@
             <artifactId>lucene-memory</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-tools</artifactId>
+        </dependency>
+
     </dependencies>
 
     <profiles>
