--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <version.jboss.as>7.2.0.Alpha1-SNAPSHOT</version.jboss.as>
+        <version.jboss.as>7.2.0.Final</version.jboss.as>
         <version.org.jboss.capedwarf.shared>1.0.0-SNAPSHOT</version.org.jboss.capedwarf.shared>
         <version.org.jboss.as.capedwarf>1.0.0-SNAPSHOT</version.org.jboss.as.capedwarf>
         <version.org.jboss.capedwarf>1.0.0-SNAPSHOT</version.org.jboss.capedwarf>
@@ -25,6 +25,7 @@
         <version.org.apache.ant>1.8.2</version.org.apache.ant>
         <version.org.apache.httpcomponents>4.2.1</version.org.apache.httpcomponents>
         <version.org.apache.lucene>3.6.2</version.org.apache.lucene>
+        <version.org.apache.velocity-tool>2.0</version.org.apache.velocity-tool>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
         <version.org.hibernate.search>4.2.0.Final</version.org.hibernate.search>
@@ -120,7 +121,7 @@
             <dependency>
                 <groupId>org.jboss.capedwarf.testsuite</groupId>
                 <artifactId>build-as</artifactId>
-                <version>${version.jboss.as}</version>
+                <version>${project.version}</version>
                 <type>pom</type>
             </dependency>
 
@@ -536,6 +537,12 @@
                 <groupId>org.apache.lucene</groupId>
                 <artifactId>lucene-memory</artifactId>
                 <version>${version.org.apache.lucene}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.velocity</groupId>
+                <artifactId>velocity-tools</artifactId>
+                <version>${version.org.apache.velocity-tool}</version>
             </dependency>
 
             <dependency>
