Add Objectify to deps.

--- a/embedded/pom.xml
+++ b/embedded/pom.xml
@@ -286,6 +286,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.googlecode.objectify</groupId>
+            <artifactId>objectify</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
