--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,8 @@
         <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
         <version.junit>4.10</version.junit>
         <version.arquillian>1.0.3.Final</version.arquillian>
-        <version.shrinkwrap>1.1.0</version.shrinkwrap>
-        <version.shrinkwrap.maven-resolver>2.0.0-alpha-4</version.shrinkwrap.maven-resolver>
+        <version.shrinkwrap>1.1.2</version.shrinkwrap>
+        <version.shrinkwrap.maven-resolver>2.0.0-beta-3</version.shrinkwrap.maven-resolver>
         <!-- DataNucleus -->
         <version.org.datanucleus>3.1.2</version.org.datanucleus>
         <version.org.datanucleus.appengine>2.1.1</version.org.datanucleus.appengine>
