--- a/embedded/pom.xml
+++ b/embedded/pom.xml
@@ -295,6 +295,13 @@
         <dependency>
             <groupId>com.googlecode.objectify</groupId>
             <artifactId>objectify</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>jaxrs-api</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
