--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,8 @@
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
         <version.org.hibernate.search>4.2.0.Final</version.org.hibernate.search>
-        <version.org.infinispan>5.2.5.Final</version.org.infinispan>
+        <version.org.jgroups>3.3.0.Beta3</version.org.jgroups>
+        <version.org.infinispan>5.3.0.Alpha1</version.org.infinispan>
         <version.org.jboss.jandex>1.0.3.Final</version.org.jboss.jandex>
         <version.org.jboss.maven.transformer>1.0.0.Beta4</version.org.jboss.maven.transformer>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
@@ -606,6 +607,12 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-search-infinispan</artifactId>
                 <version>${version.org.hibernate.search}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jgroups</groupId>
+                <artifactId>jgroups</artifactId>
+                <version>${version.org.jgroups}</version>
             </dependency>
 
             <dependency>
