--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,9 @@
         <!-- Maven plugins -->
         <version.maven.dependency>2.5.1</version.maven.dependency>
         <version.maven.surefire>2.12.1</version.maven.surefire>
+        <!-- Compiler configuration -->
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
 
     <modules>
