--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
         <version.org.hibernate.search>4.3.0.Alpha1</version.org.hibernate.search>
         <version.org.jgroups>3.3.0.Beta3</version.org.jgroups>
-        <version.org.infinispan>5.3.0.Alpha1</version.org.infinispan>
+        <version.org.infinispan>5.3.0.Beta1</version.org.infinispan>
         <version.org.jboss.jandex>1.0.3.Final</version.org.jboss.jandex>
         <version.org.jboss.maven.transformer>1.0.0.Beta4</version.org.jboss.maven.transformer>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
