--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <version.org.jboss.capedwarf.shared>1.0.0-SNAPSHOT</version.org.jboss.capedwarf.shared>
         <version.org.jboss.as.capedwarf>1.0.0-SNAPSHOT</version.org.jboss.as.capedwarf>
         <version.org.jboss.capedwarf>1.0.0-SNAPSHOT</version.org.jboss.capedwarf>
+        <!-- GAE TCK -->
+        <version.com.google.appengine.tck>1.0.0-SNAPSHOT</version.com.google.appengine.tck>
         <!-- External deps -->
         <version.com.google.appengine>1.8.0</version.com.google.appengine>
         <version.com.google.guava>14.0.1</version.com.google.guava>
@@ -28,8 +30,8 @@
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
         <version.org.hibernate.search>4.3.0.Alpha1</version.org.hibernate.search>
-        <version.org.jgroups>3.3.0.Beta3</version.org.jgroups>
-        <version.org.infinispan>5.3.0.Beta1</version.org.infinispan>
+        <version.org.jgroups>3.3.0.Final</version.org.jgroups>
+        <version.org.infinispan>5.3.0.Beta2</version.org.infinispan>
         <version.org.jboss.jandex>1.0.3.Final</version.org.jboss.jandex>
         <version.org.jboss.maven.transformer>1.0.0.Beta4</version.org.jboss.maven.transformer>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
@@ -79,10 +81,11 @@
 
     <modules>
         <module>build-as</module>
-        <module>embedded</module>
         <module>integrate-cd</module>
+        <module>embedded</module>
         <module>tests</module>
         <module>tools</module>
+        <module>tck</module>
     </modules>
 
     <repositories>
@@ -149,6 +152,12 @@
             <dependency>
                 <groupId>org.jboss.capedwarf</groupId>
                 <artifactId>jboss-as-capedwarf</artifactId>
+                <version>${version.org.jboss.as.capedwarf}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.capedwarf</groupId>
+                <artifactId>jboss-as-capedwarf-workaround</artifactId>
                 <version>${version.org.jboss.as.capedwarf}</version>
             </dependency>
 
@@ -504,6 +513,63 @@
                 <version>${version.org.jboss.capedwarf}</version>
                 <type>test-jar</type>
                 <scope>test</scope>
+            </dependency>
+
+            <!-- GAE TCK -->
+
+            <dependency>
+                <groupId>org.jboss.capedwarf.tck</groupId>
+                <artifactId>gae-tck</artifactId>
+                <version>${version.com.google.appengine.tck}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.appengine.tck</groupId>
+                <artifactId>appengine-tck-capability</artifactId>
+                <version>${version.com.google.appengine.tck}</version>
+                <type>test-jar</type>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.appengine.tck</groupId>
+                <artifactId>appengine-tck-datastore</artifactId>
+                <version>${version.com.google.appengine.tck}</version>
+                <type>test-jar</type>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.appengine.tck</groupId>
+                <artifactId>appengine-tck-logservice</artifactId>
+                <version>${version.com.google.appengine.tck}</version>
+                <type>test-jar</type>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.appengine.tck</groupId>
+                <artifactId>appengine-tck-memcache</artifactId>
+                <version>${version.com.google.appengine.tck}</version>
+                <type>test-jar</type>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.appengine.tck</groupId>
+                <artifactId>appengine-tck-taskqueue</artifactId>
+                <version>${version.com.google.appengine.tck}</version>
+                <type>test-jar</type>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.appengine.tck</groupId>
+                <artifactId>appengine-tck-urlfetch</artifactId>
+                <version>${version.com.google.appengine.tck}</version>
+                <type>test-jar</type>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.appengine.tck</groupId>
+                <artifactId>appengine-tck-users</artifactId>
+                <version>${version.com.google.appengine.tck}</version>
+                <type>test-jar</type>
             </dependency>
 
             <!-- External Dependencies -->
