--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <version.org.apache.lucene>3.6.2</version.org.apache.lucene>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
-        <version.org.hibernate.search>4.3.0.Alpha1</version.org.hibernate.search>
+        <version.org.hibernate.search>4.3.0.Beta1</version.org.hibernate.search>
         <version.org.jgroups>3.3.0.Final</version.org.jgroups>
         <version.org.infinispan>5.3.0.Beta2</version.org.infinispan>
         <version.org.jboss.jandex>1.0.3.Final</version.org.jboss.jandex>
