Support test methods ignore.

--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -88,6 +88,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.kohsuke.metainf-services</groupId>
+            <artifactId>metainf-services</artifactId>
+        </dependency>
+
         <!-- Tests -->
 
         <dependency>
