Add blobstore TCK tests.

--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -103,6 +103,13 @@
 
         <dependency>
             <groupId>com.google.appengine.tck</groupId>
+            <artifactId>appengine-tck-blobstore</artifactId>
+            <scope>test</scope>
+            <type>test-jar</type>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.appengine.tck</groupId>
             <artifactId>appengine-tck-capability</artifactId>
             <scope>test</scope>
             <type>test-jar</type>
