--- a/integrate-cd/build.xml
+++ b/integrate-cd/build.xml
@@ -105,16 +105,11 @@
         </module-def>
 
         <module-def name="org.jboss.as.capedwarf">
-            <maven-resource group="org.jboss.capedwarf" artifact="jboss-as-capedwarf"/>
+            <maven-resource group="org.jboss.capedwarf" artifact="wildfly-capedwarf"/>
         </module-def>
 
         <module-def name="org.jboss.as.clustering.infinispan">
-            <maven-resource group="org.jboss.as" artifact="jboss-as-clustering-infinispan"/>
-        </module-def>
-
-        <module-def name="org.jboss.as.clustering.jgroups">
-            <maven-resource group="org.jboss.capedwarf" artifact="jboss-as-capedwarf-workaround"/>
-            <maven-resource group="org.jboss.as" artifact="jboss-as-clustering-jgroups"/>
+            <maven-resource group="org.wildfly" artifact="wildfly-clustering-infinispan"/>
         </module-def>
 
         <module-def name="org.jboss.capedwarf.shared">
