--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -51,7 +51,7 @@
                         <include>org/jboss/test/**/*Test.java</include>
                     </includes>
                     <systemProperties>
-                        <jboss.dir>${basedir}/../build-as/target/jboss-as-${version.jboss.as}</jboss.dir>
+                        <jboss.dir>${basedir}/../build-as/target/wildfly-${version.jboss.wildfly}</jboss.dir>
                     </systemProperties>
                 </configuration>
             </plugin>
@@ -84,8 +84,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.as</groupId>
-            <artifactId>jboss-as-arquillian-container-managed</artifactId>
+            <groupId>org.wildfly</groupId>
+            <artifactId>wildfly-arquillian-container-managed</artifactId>
             <scope>test</scope>
         </dependency>
 
