--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -138,6 +138,13 @@
 
         <dependency>
             <groupId>com.google.appengine.tck</groupId>
+            <artifactId>appengine-tck-mail</artifactId>
+            <scope>test</scope>
+            <type>test-jar</type>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.appengine.tck</groupId>
             <artifactId>appengine-tck-memcache</artifactId>
             <scope>test</scope>
             <type>test-jar</type>
