--- a/integrate-cd/build.xml
+++ b/integrate-cd/build.xml
@@ -137,6 +137,7 @@
             <maven-resource group="org.jboss.capedwarf.blue" artifact="capedwarf-prospectivesearch"/>
             <maven-resource group="org.jboss.capedwarf.blue" artifact="capedwarf-quota"/>
             <maven-resource group="org.jboss.capedwarf.blue" artifact="capedwarf-search"/>
+            <maven-resource group="org.jboss.capedwarf.blue" artifact="capedwarf-sql"/>
             <maven-resource group="org.jboss.capedwarf.blue" artifact="capedwarf-tasks"/>
             <maven-resource group="org.jboss.capedwarf.blue" artifact="capedwarf-urlfetch"/>
             <maven-resource group="org.jboss.capedwarf.blue" artifact="capedwarf-users"/>
