--- a/integrate-cd/pom.xml
+++ b/integrate-cd/pom.xml
@@ -317,6 +317,11 @@
 
         <dependency>
             <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-sql</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
             <artifactId>capedwarf-urlfetch</artifactId>
         </dependency>
 
