--- a/pom.xml
+++ b/pom.xml
@@ -296,6 +296,12 @@
 
             <dependency>
                 <groupId>org.jboss.capedwarf.blue</groupId>
+                <artifactId>capedwarf-sql</artifactId>
+                <version>${version.org.jboss.capedwarf}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.capedwarf.blue</groupId>
                 <artifactId>capedwarf-tasks</artifactId>
                 <version>${version.org.jboss.capedwarf}</version>
             </dependency>
