--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -186,6 +186,19 @@
         </dependency>
 
         <dependency>
+            <groupId>com.google.appengine.tck</groupId>
+            <artifactId>gcs-client</artifactId>
+            <scope>test</scope>
+            <type>test-jar</type>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.appengine.tools</groupId>
+            <artifactId>appengine-gcs-client</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <scope>test</scope>
