--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,8 @@
         <version.charts4j>1.3</version.charts4j>
         <version.commons-logging>1.1.1</version.commons-logging>
         <version.org.json>20090211</version.org.json>
+        <!-- Testing GCS Client -->
+        <version.com.google.appengine.tools.cloudstorage>0.3</version.com.google.appengine.tools.cloudstorage>
         <!-- Testing Iddx -->
         <version.com.google.api-client>1.11.0-beta</version.com.google.api-client>
         <version.com.google.api-services-bigquery>v2-rev33-1.8.0-beta</version.com.google.api-services-bigquery>
@@ -614,7 +616,20 @@
                 <type>test-jar</type>
             </dependency>
 
+            <dependency>
+                <groupId>com.google.appengine.tck</groupId>
+                <artifactId>gcs-client</artifactId>
+                <version>${version.com.google.appengine.tck}</version>
+                <type>test-jar</type>
+            </dependency>
+
             <!-- External Dependencies -->
+
+            <dependency>
+                <groupId>com.google.appengine.tools</groupId>
+                <artifactId>appengine-gcs-client</artifactId>
+                <version>${version.com.google.appengine.tools.cloudstorage}</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.google.guava</groupId>
