--- a/integrate-cd/pom.xml
+++ b/integrate-cd/pom.xml
@@ -73,8 +73,8 @@
                             <includePluginDependencies>false</includePluginDependencies>
                             <mainClass>org.jboss.capedwarf.bytecode.CapedwarfTransformerMojo</mainClass>
                             <arguments>
-                                <argument>${jboss.dir}/modules/com/google/appengine/main/appengine-api-1.0-sdk-${version.com.google.appengine}.jar
-                                </argument>
+                                <argument>${jboss.dir}/modules/com/google/appengine/main/appengine-api-1.0-sdk-${version.com.google.appengine}.jar</argument>
+                                <argument>${jboss.dir}/modules/com/google/appengine/main/appengine-api-labs-${version.com.google.appengine}.jar</argument>
                             </arguments>
                         </configuration>
                     </execution>
