--- a/integrate-cd/build.xml
+++ b/integrate-cd/build.xml
@@ -185,6 +185,13 @@
             <maven-resource group="org.geotoolkit" artifact="geotk-coverageio"/>
         </module-def>
 
+        <!-- Override Web -->
+        <module-def name="org.jboss.as.web">
+            <maven-resource group="org.jboss.as" artifact="jboss-as-web"/>
+            <maven-resource group="org.eclipse.jdt.core.compiler" artifact="ecj"/>
+            <maven-resource group="org.jboss.web" artifact="jbossweb"/>
+        </module-def>
+
     </target>
 
     <target name="clean-target">
