--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -89,6 +89,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.xnio</groupId>
+            <artifactId>xnio-nio</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Tests -->
 
         <dependency>
