--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -88,6 +88,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.xnio</groupId>
+            <artifactId>xnio-nio</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Tests -->
 
         <dependency>
