--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,7 @@
         <version.javax.jpa2>1.0.1.Final</version.javax.jpa2>
         <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
         <version.junit>4.11</version.junit>
-        <version.arquillian>1.0.4.Final</version.arquillian>
-        <version.shrinkwrap>1.1.2</version.shrinkwrap>
-        <version.shrinkwrap.resolver>2.0.0-beta-3</version.shrinkwrap.resolver>
+        <version.arquillian>1.1.1.Final</version.arquillian>
         <version.metainf>1.1</version.metainf>
         <!-- DataNucleus -->
         <version.org.datanucleus>3.1.2</version.org.datanucleus>
@@ -649,6 +647,13 @@
 
             <dependency>
                 <groupId>com.google.appengine.tck</groupId>
+                <artifactId>sockets</artifactId>
+                <version>${version.com.google.appengine.tck}</version>
+                <type>test-jar</type>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.appengine.tck</groupId>
                 <artifactId>sql</artifactId>
                 <version>${version.com.google.appengine.tck}</version>
                 <type>test-jar</type>
@@ -992,26 +997,6 @@
                 <scope>provided</scope>
             </dependency>
 
-            <!-- ShrinkWrap -->
-
-            <!-- This must go *BEFORE* the Arquillian BOM. -->
-
-            <dependency>
-                <groupId>org.jboss.shrinkwrap</groupId>
-                <artifactId>shrinkwrap-bom</artifactId>
-                <version>${version.shrinkwrap}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jboss.shrinkwrap.resolver</groupId>
-                <artifactId>shrinkwrap-resolver-bom</artifactId>
-                <version>${version.shrinkwrap.resolver}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-
             <!-- Testing MapReduce -->
 
             <dependency>
@@ -1037,7 +1022,6 @@
                 <artifactId>json</artifactId>
                 <version>${version.org.json}</version>
             </dependency>
-
 
             <!-- Testing Iddx -->
 
